


DescTools 0.99.61 (2025-05-28)
------------------------------

NEW FUNCTIONS ADDED:
  * FmtCI() returns formatted confidence intervals.

UPDATED FUNCTIONS:
  * XLView() uses write_xlsx instead write.table allowing better support
    for non ASCII characters.
  * CutAge() gains a new argument full, allowing to remove empty
    levels at the edges of the distribution.
  * LeveneTest() has been given the same interface as similar functions in 
    base R (as ansari.test or kruskal.test). lm-interface has been defunct.
  * ConDisPairs() now runs in O(n log^2 n) instead in O(n*n), and so 
    do all the dependent functions.
  * Format() looses the two predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%".
  * Format() gains a new argument outdec.  
	
    
BUGFIXES:
  * DoBy() ignored provided names for the new created variables. 
  * Corrected several typos in names (Quesenberry, Jeffreys). 
    (Credit to musvaage in https://github.com/AndriSignorell/DescTools/pull/169)
  * ICC() no longer fails when "type" argument is set to anything other 
    than "all". (Credit to Alphonse Kwizera)
  * PercentRank() now subtracts 1 in nominator and denominator ensuring
    the scale runs from 0 to 1.  




DescTools 0.99.60 (2025-03-28)
------------------------------

NEW FUNCTIONS ADDED:
  * Downloads() helperfunction for a fast access to downloaded 
    XL- or data files.
  * Moment functions for the most common distributions.

UPDATED FUNCTIONS:
  * FisherZ() and FisherZInv() use atanh(), resp. tanh() now.
    (Credits to Daniel Wollschlaeger)
  * Year(), Week(), YearWeek() have been recoded in C++ and run now
    4-10 times faster.
  * Format() gets two new predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%".
  * Small improvement in Outlier() for method "hampel"  
    (Credits to Luis Gustavo Schuck).




DescTools 0.99.59 (2025-01-26)
------------------------------

NEW FUNCTIONS ADDED: