@@ -1,7 +1,7 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.60.8
+Version: 0.99.60.9
 Date: 2025-07-10
 Authors@R: c(
   person(given="Andri", family="Signorell", 
