@@ -658,7 +658,6 @@ reference:
   - title: "Tools and Utilities"
     contents:
     - AllIdentical
-    - DoiBibtex
     - DescToolsOptions
     - DoCall
     - FctArgs
