@@ -11,7 +11,9 @@ UPDATED FUNCTIONS:
   * XLView() uses write_xlsx instead write.table allowing better support
     for non ASCII characters.
   * CutAge() gains a new argument full, allowing to remove empty
-    levels at the edges of the distribution.
+    levels at the edges of the distribution. The arguments have been changed.
+    from, to, by have been replaced by breaks and a new argument labels allow 
+    to define better suited labels for the levels.
   * LeveneTest() has been given the same interface as similar functions in 
     base R (as ansari.test or kruskal.test). lm-interface has been defunct.
   * ConDisPairs() now runs in O(n log^2 n) instead in O(n*n), and so 
